# dirty-log

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  changeauthor
src/: build_options.hpp.in  copy_args.hpp  dlog.cpp  dlog.hpp  format_signature.hpp  len_prefixed_buffer.hpp  log_writer.hpp  loggabletypes.hpp  sandbox.cpp  seq.hpp  signature.hpp  traits.hpp  type_id.hpp  typeid.hpp
